# sandbox

./: .gitignore  README.md
Hoge/: build.sbt
Hoge/conf/: application.conf
Hoge/project/: build.properties
ai-coding/: README.md  create_stereo_test_images.py  create_test_image.py  main.py  pyproject.toml  raster_scan.py  stereo_vision.py
app/: bower.json  gulpfile.js
app/app/: index.html
avr/: simpleIo.elf  simpleIo.ihex  simpleio.s
c/: hoge.c
c/binsample/: sample.c
c/emola/: dict.h  emola  hash.h  list.h  main.c  token.h
c/helloasm/: hello.c  hello.lisp  hello.s
c/json/: main.c  test.json
c/ncursessample/: Makefile  sample  sample.c
c/network/: echo_server.c  echo_server_select.c  (+3 more)
clisp/: quicklisp.lisp.asc
clojure/: hoge.clj  repl.clj  tags  test.clj
cs/: Program.cs  hello.cs
erlang/: #hoge.c#  hello.beam  hello.erl  run.sh
go/: client.go  example.go  figure.go  go_get.sh  hoge.go  main.go  message_queue.go  reverse.go  sample.go  server.go  tcp_server
haskell/: hello.hs  hoge.hs  reverse.hs  sansyu.hs
hello-spring-boot/: Main.java  build.gradle
html/: index.html
javascript/: index.html  promise.js
k8s/: deployment.yaml~  nginx-pod.yaml~
kotlin/: MLisp.kt  run.sh
nasm/: helloworld.s
novel/: README.md
ocaml/: hello.ml  hoge.ml  ocaml-td4.ml
php/: sample.php
python/: async.py  fizzbuzz.py  hoge.py  htmlparser.py  input.py  irc.py  piyo.py
ruby/: hoge.rb  sample.rb
rust/: hello
rust/actix-sample/: Cargo.toml
scala/: .gitignore  Common.scala  Piyo.scala  hoge.scala  sum.scala
vimscript/: other.vim  sample.vim
(+513 files in other folders)
