[package]
name = "actix-sample"
version = "0.1.0"
authors = ["ymizushi <mizushi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
diesel = { version = "1.4.5", features = ["sqlite"] }
